删除无用资源，增加NanoBeacon需求

--- a/app/src/main/res/layout/beaconx_sensor.xml
+++ b/app/src/main/res/layout/beaconx_sensor.xml
@@ -20,10 +20,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:text="URL"
-            android:textStyle="bold"
+            android:text="Sensor info"
             android:textColor="@color/black_333333"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:textStyle="bold" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -35,41 +35,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:text="RSSI@0m"
+            android:text="Temperature"
             android:textColor="@color/grey_999999"
             android:textSize="12sp" />
 
         <TextView
-            android:id="@+id/tv_rssi_0m"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="170dp"
-            android:text="0dBm"
-            android:textColor="@color/grey_666666"
-            android:textSize="12sp" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="3dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:text="URL link"
-            android:textColor="@color/grey_999999"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/tv_url"
+            android:id="@+id/tv_temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="170dp"
             android:text=""
-            android:textColor="@color/blue_0099ff"
+            android:textColor="@color/grey_666666"
             android:textSize="12sp" />
     </RelativeLayout>
-
 </LinearLayout>
