--- a/app/src/main/res/layout/beaconx_ibeacon_nano.xml
+++ b/app/src/main/res/layout/beaconx_ibeacon_nano.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:text="3-axis accelerometer"
+            android:text="iBeacon"
             android:textColor="@color/black_333333"
             android:textSize="14sp"
             android:textStyle="bold" />
@@ -35,12 +35,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:text="Tx power"
+            android:text="UUID"
             android:textColor="@color/grey_999999"
             android:textSize="12sp" />
 
         <TextView
-            android:id="@+id/tv_tx_power"
+            android:id="@+id/tv_uuid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="170dp"
@@ -58,12 +58,58 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:text="Ranging data"
+            android:text="Major"
             android:textColor="@color/grey_999999"
             android:textSize="12sp" />
 
         <TextView
-            android:id="@+id/tv_rssi_0m"
+            android:id="@+id/tv_major"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="170dp"
+            android:text=""
+            android:textColor="@color/grey_666666"
+            android:textSize="12sp" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="3dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:text="Minor"
+            android:textColor="@color/grey_999999"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/tv_minor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="170dp"
+            android:text=""
+            android:textColor="@color/grey_666666"
+            android:textSize="12sp" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="3dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:text="RSSI@1m"
+            android:textColor="@color/grey_999999"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/tv_rssi_1m"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="170dp"
@@ -81,12 +127,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:text="Sampling rate"
+            android:text="Proximity state"
             android:textColor="@color/grey_999999"
             android:textSize="12sp" />
 
         <TextView
-            android:id="@+id/tv_data_rate"
+            android:id="@+id/tv_proximity_state"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="170dp"
@@ -95,72 +141,4 @@
             android:textSize="12sp" />
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="3dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:text="Full-scale"
-            android:textColor="@color/grey_999999"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/tv_scale"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="170dp"
-            android:text=""
-            android:textColor="@color/grey_666666"
-            android:textSize="12sp" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="3dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:text="Motion threshold "
-            android:textColor="@color/grey_999999"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/tv_sensitivity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="170dp"
-            android:text=""
-            android:textColor="@color/grey_666666"
-            android:textSize="12sp" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="3dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:text="Acceleration"
-            android:textColor="@color/grey_999999"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/tv_sampled_data"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="170dp"
-            android:text=""
-            android:textColor="@color/grey_666666"
-            android:textSize="12sp" />
-    </RelativeLayout>
 </LinearLayout>
