--- a/app/src/main/res/layout/list_item_device_nano.xml
+++ b/app/src/main/res/layout/list_item_device_nano.xml
@@ -11,14 +11,13 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/tv_name"
+            android:id="@+id/tv_mac"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
-            android:layout_toLeftOf="@id/tv_connect"
             android:layout_toRightOf="@id/tv_rssi"
-            android:text="N/A"
+            android:text="AA:BB:CC:DD:EE:FF"
             android:textColor="@color/black_333333"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -34,25 +33,11 @@
             android:text="-80"
             android:textColor="@color/grey_666666" />
 
-        <TextView
-            android:id="@+id/tv_connect"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/shape_radius_blue_bg"
-            android:gravity="center"
-            android:paddingLeft="12dp"
-            android:paddingRight="12dp"
-            android:text="CONNECT"
-            android:textColor="@color/white_ffffff" />
-
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:gravity="center_vertical">
 
         <ImageView
@@ -67,67 +52,33 @@
             android:id="@+id/tv_battery"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/tv_tx_power"
+            android:layout_below="@id/iv_battery"
             android:text=""
             android:textColor="@color/grey_666666"
             android:textSize="10sp" />
 
         <TextView
-            android:id="@+id/tv_mac"
+            android:id="@+id/tv_tag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="30dp"
             android:layout_toRightOf="@id/iv_battery"
+            android:layout_alignBaseline="@id/tv_battery"
             android:includeFontPadding="false"
-            android:text="MAC:AA:BB:CC:DD:EE:FF"
+            android:text="Tag ID:AA:BB:CC:DD:EE:FF"
             android:textColor="@color/grey_666666"
             android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/tv_tx_power"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_mac"
-            android:layout_alignLeft="@id/tv_mac"
-            android:layout_marginTop="5dp"
-            android:text="Tx power:N/A"
-            android:textColor="@color/grey_666666"
-            android:textSize="10sp"
-            android:visibility="invisible" />
-
-        <TextView
-            android:id="@+id/tv_ranging_data"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_mac"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_toRightOf="@id/tv_tx_power"
-            android:text="Ranging data:N/A"
-            android:textColor="@color/grey_666666"
-            android:textSize="10sp"
-            android:visibility="invisible" />
 
         <TextView
             android:id="@+id/tv_interval_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/tv_tx_power"
+            android:layout_alignBaseline="@id/tv_tag"
             android:layout_alignParentRight="true"
             android:layout_marginTop="5dp"
             android:text=""
             android:textColor="@color/grey_666666"
             android:textSize="10sp" />
-
-        <!--<TextView
-            android:id="@+id/tv_conn_state"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:includeFontPadding="false"
-            android:text="N/A"
-            android:textSize="14sp"
-            android:textColor="@color/grey_666666" />-->
     </RelativeLayout>
 
     <View
