--- a/app/src/main/res/layout/dialog_scan_filter_nano.xml
+++ b/app/src/main/res/layout/dialog_scan_filter_nano.xml
@@ -27,6 +27,19 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+            <ImageView
+                android:id="@+id/ivScanMac"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
+                android:src="@drawable/ic_scan_grey" />
+
+            <View
+                style="@style/divider_line_vertical"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp" />
+
             <EditText
                 android:id="@+id/et_filter_condition"
                 android:layout_width="0dp"
@@ -34,7 +47,9 @@
                 android:layout_weight="1.0"
                 android:background="@color/transparent"
                 android:gravity="center_vertical"
-                android:hint="Mac address or Tag ID"
+                android:hint="Mac address"
+                android:maxLength="12"
+                android:digits="0123456789abcdefABCDEF"
                 android:paddingLeft="10dp"
                 android:singleLine="true"
                 android:textColorHint="@color/grey_ebebeb" />
@@ -62,11 +77,11 @@
             android:id="@+id/tv_rssi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
             android:text="0dBm"
             android:textColor="@color/text_black_4d4d4d"
             android:textSize="15sp"
-            android:layout_marginLeft="20dp"
             app:layout_constraintLeft_toRightOf="@id/tv_rssi_title"
             app:layout_constraintTop_toBottomOf="@id/ll_filter_condition" />
 
