--- a/app/src/main/res/layout/list_item_device_nano.xml
+++ b/app/src/main/res/layout/list_item_device_nano.xml
@@ -11,13 +11,13 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/tv_mac"
+            android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
             android:layout_toRightOf="@id/tv_rssi"
-            android:text="AA:BB:CC:DD:EE:FF"
+            android:text=""
             android:textColor="@color/black_333333"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -58,14 +58,14 @@
             android:textSize="10sp" />
 
         <TextView
-            android:id="@+id/tv_tag"
+            android:id="@+id/tv_mac"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_toRightOf="@id/iv_battery"
             android:layout_alignBaseline="@id/tv_battery"
             android:includeFontPadding="false"
-            android:text="Tag ID:AA:BB:CC:DD:EE:FF"
+            android:text="MAC:AA:BB:CC:DD:EE:FF"
             android:textColor="@color/grey_666666"
             android:textSize="14sp" />
 
@@ -73,7 +73,7 @@
             android:id="@+id/tv_interval_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/tv_tag"
+            android:layout_alignBaseline="@id/tv_mac"
             android:layout_alignParentRight="true"
             android:layout_marginTop="5dp"
             android:text=""
