--- a/app/src/main/res/layout/dialog_scan_filter_nano.xml
+++ b/app/src/main/res/layout/dialog_scan_filter_nano.xml
@@ -141,7 +141,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:text="@string/rssi_filter_tips"
+            android:text="@string/rssi_filter_tips_nano"
             android:textColor="@color/black_333333"
             android:textSize="15sp"
             app:layout_constraintLeft_toLeftOf="parent"
